# frida-decrypt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/frida_decrypt/: __init__.py  cli.py
