[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frida-decrypt"
version = "1.0.0"
description = "A tool to decrypt iOS app binaries using Frida"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Steve"}
]
dependencies = [
    "frida>=17.0.0",
    "lief>=0.12.0",
]

[project.scripts]
frida-decrypt = "frida_decrypt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
